--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ permalink: /contact/
 <!-- contact form start -->
 <section id="contact-form">
   <div class="container">
-    <div class="row">
+    <!-- div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
           <form>
@@ -46,7 +46,7 @@ permalink: /contact/
           </form>
         </div>
       </div>
-    </div>
+    </div -->
     <div id="contact-box" class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
@@ -56,7 +56,7 @@ permalink: /contact/
               <i class="fa fa-map-marker"></i>5320 E. Lewis Lane, Nampa, ID
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: tylerwelshimer@gmail.com
+              <i class="fa fa-envelope-o"></i>Email: <a href="mailto:tylerwelshimer@gmail.com">tylerwelshimer@gmail.com</a>
             </li>
             <li>
               <i class="fa fa-phone"></i>Phone: 208.899.9398 or 208.466.1818
