--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ permalink: /
         <div class="block">
           <h1 class="animated fadeInUp">Welshimer Wheels<br> Mobile Bicycle Repair</h1>
           <p class="animated fadeInUp">We are a full service Bicycle Repair Shop<br> & We Make House Calls</p>
+          <p class="call">Call: 208.899.9398 or 208.466.1818</p>
         </div>
       </div>
     </div>
