--- a/services.html
+++ b/services.html
@@ -17,3 +17,48 @@ permalink: /services/
         </div>
     </div>
 </section>
+
+<section id="price-list">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+					<div class="block">
+						<h2>Welshimer Wheels Labor Price List</h2>
+						<ul>
+							<li>
+								Basic tune-up &mdash; $50 (includes safety check, cleaning, adjusting derailleurs, brakes, check all bolts for proper torque, test ride)
+							</li>
+							<li>
+								Major tune up &mdash; $70 (includes basic tune up plus truing wheels)
+							</li>
+							<li>
+								Truing wheels &mdash; $15 per wheel/$25 a pair
+							</li>
+							<li>
+								Assemble bicycle &mdash; $60-$90 (out of box depending on amount pre-assembled)
+							</li>
+							<li>
+								Complete overhaul &mdash; $150
+							</li>
+							<li>
+								Parts
+								<ul>
+									<li>&mdash; Tubes - $6</li>
+									<li>&mdash; puncture resistant tube - $12</li>
+									<li>&mdash; slime (4 oz.) - $4</li>
+									<li>&mdash; contact us for other price quotes</li>
+								</ul>
+							</li>
+							<li>
+								Tire or tube installation - $5, slime install - $4
+							</li>
+							<li>
+								Wheel build - $45 plus parts
+							</li>
+						</ul>
+						<p class="bold">We do not service trikes or electric bikes</p>
+					</div>
+			</div>
+		</div>
+	</div>
+</section>
